# opengltest7_16

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test
src/: 7_24_A.cpp  Shader.cpp  Shader.h  fs.glsl  glad.c  vs.glsl
